# angel-copilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  angel-copilot.skill  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: local-setup.md  repository_structure.md
docs/assets/: README.md
examples/: profile.local.template.md
examples/sample-deal/: README.md  syntheticco_01_alphamesh_memo.md
examples/sample-output/: README.md
examples/sample-output/dealflow-triage/: README.md  angelcopilot_batch_report.md  angelcopilot_batch_summary.csv  fictional_batch_assessments.json
examples/sample-output/quick-deal-memo/: sample_quick_deal_memo.md
scripts/: build_skill_package.sh  verify_skill_package.sh
skills/public/angel-copilot/: SKILL.md
src/angelcopilot_batch/: __init__.py  assistant.py  cli.py  extraction.py  intake.py  job.py  models.py  pdf.py  pipeline.py  preparation.py  profile.py  reporting.py  scoring.py
tests/: conftest.py  test_assistant.py  test_intake.py  test_job.py  test_pipeline_integration.py  test_reporting.py
tests/fixtures/deals/: README.md
tests/fixtures/deals/alpha_ai/: AngelList.txt  one_pager.md
tests/integration/: test_cli_setup.py  test_pipeline_fixture_regression.py  test_pipeline_integration.py  test_pipeline_pdf_regression.py
tests/unit/: test_assistant.py  test_extraction.py  test_intake.py  test_intake_fixtures.py  test_job.py  test_preparation.py  test_profile.py  test_reporting.py  test_scoring.py
(+7 files in other folders)
