[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "angelcopilot-batch"
version = "0.1.0"
description = "Batch deal assessment runner for AngelCopilot"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=4.0",
  "python-docx>=1.1",
  "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
angelcopilot = "angelcopilot_batch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
